# roll-dice-dnd

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.json  config.json.tpl  dice.py  dices.py  discord_client.py  dnd_character_service_plan.md  docker-compose-separate.yml  docker-compose.yml  env.json.tpl  initiative.py  pyproject.toml  requirements.txt  roll.py  roll_view.py  save_dice.py  secrets.json.tpl  start-bots.sh  stats_db.py  tasks.py  test-public.db
back/: celery.py  tasks.py
data/characters/: trovao.json
src/: .env.example  config.json.example  config.py  dice.py  initiative.py  logger.py  logging.json  main.py  plugin_manager.py  save_dice.py  stats_db.py  utils.py
src/commands/: __init__.py  commands.py  debug.py  dice_storage.py  initiative.py  roll_dice.py  stats.py
src/core/: dice_engine.py  dm_manager.py  helper.py  initiative.py  roll.py  roll_view.py  stats_db.py
src/db/: models.py
src/plugins/: README.md
src/plugins/character/: character_manager.py  pdf_extractor.py  plugin_character.py  plugin_config.json  sheet_formatter.py
src/plugins/hello_world/: plugin_config.json  plugin_example.py  plugin_main.py
src/plugins/magic/: magic_fail.json  magic_surge.json  magic_tables.json  (+2 more)
src/telegram_bot/: __init__.py  bot.py  character_telegram.py  d20_irl_client.py  main.py  roll_view_telegram.py  sheet_formatter_telegram.py
src/tests/: conftest.py  test_dice_engine.py  test_dice_roll_math.py  test_initiative_commands.py  test_initiative_core.py  test_npc_initiative.py  test_roll_class.py  test_roll_view.py  test_stats.py  test_telegram_bot.py
workspace/: D20-IRL-detection.code-workspace
(+9 files in other folders)
